[gd_scene load_steps=11 format=3 uid="uid://d04rb4qsoiyfe"]

[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_e5ys8"]
[ext_resource type="Theme" uid="uid://bkbdw0jadsuqp" path="res://content/ui/default_theme.tres" id="1_mnbn2"]
[ext_resource type="Texture2D" uid="uid://b61m5ygna3b1" path="res://content/ui/TitleCard.png" id="2_xmcm2"]
[ext_resource type="PackedScene" uid="uid://b581mq5i0olgm" path="res://scenes/settings_menu.tscn" id="3_lrfn7"]
[ext_resource type="AudioStream" uid="uid://bvhlgubtokc4c" path="res://music/intro-theme.wav" id="3_o4xmn"]
[ext_resource type="Texture2D" uid="uid://dlpjm5qqqwt8e" path="res://content/ui/button_bg_ui.png" id="4_5376x"]
[ext_resource type="FontFile" uid="uid://bi0gex0agxwfh" path="res://content/fonts/Adumu.ttf" id="4_gpti7"]
[ext_resource type="AudioStream" uid="uid://cy5y3v5g4vyme" path="res://sfx/start-game.wav" id="8_1h0ge"]

[sub_resource type="InputEventAction" id="InputEventAction_ako2q"]
action = &"ui_accept"

[sub_resource type="Shortcut" id="Shortcut_20qb5"]
events = [SubResource("InputEventAction_ako2q")]

[node name="MainMenu" type="Node"]
script = ExtResource("1_e5ys8")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(640, 362)
scale = Vector2(0.51727, 0.400833)
texture = ExtResource("2_xmcm2")

[node name="SettingsMenu" parent="." instance=ExtResource("3_lrfn7")]

[node name="MainMenuButton" type="TextureButton" parent="SettingsMenu"]
offset_left = 553.0
offset_top = 468.0
offset_right = 1191.0
offset_bottom = 758.0
scale = Vector2(0.317665, 0.317665)
texture_normal = ExtResource("4_5376x")

[node name="Label" type="Label" parent="SettingsMenu/MainMenuButton"]
layout_mode = 0
offset_right = 220.0
offset_bottom = 98.0
scale = Vector2(2.89703, 2.89703)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_gpti7")
theme_override_font_sizes/font_size = 38
text = "Main Menu"
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true

[node name="HUD" type="CanvasLayer" parent="."]

[node name="ButtonsContainer" type="VBoxContainer" parent="HUD"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -150.0
offset_top = -300.0
offset_right = 150.0
offset_bottom = -100.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1

[node name="PlayButton" type="Button" parent="HUD/ButtonsContainer"]
layout_mode = 2
theme = ExtResource("1_mnbn2")
theme_override_fonts/font = ExtResource("4_gpti7")
shortcut = SubResource("Shortcut_20qb5")
shortcut_in_tooltip = false
text = "Play
"

[node name="SettingsButton" type="Button" parent="HUD/ButtonsContainer"]
layout_mode = 2
theme = ExtResource("1_mnbn2")
theme_override_fonts/font = ExtResource("4_gpti7")
shortcut_in_tooltip = false
text = "Settings
"

[node name="ExitButton" type="Button" parent="HUD/ButtonsContainer"]
layout_mode = 2
theme = ExtResource("1_mnbn2")
theme_override_fonts/font = ExtResource("4_gpti7")
shortcut_in_tooltip = false
text = "Exit
"

[node name="MenuTheme" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_o4xmn")
volume_db = -15.0
autoplay = true
bus = &"BGM"

[node name="PlaySFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_1h0ge")
volume_db = -20.0
bus = &"BGM"

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 100

[node name="FadeIn" type="ColorRect" parent="CanvasLayer"]
modulate = Color(1, 1, 1, 0)
z_index = 100
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[connection signal="pressed" from="SettingsMenu/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
[connection signal="pressed" from="HUD/ButtonsContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="HUD/ButtonsContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="HUD/ButtonsContainer/ExitButton" to="." method="_on_exit_button_pressed"]
